--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
@@ -33,7 +33,12 @@
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="TextAlignment" Value="Justify"/>        
     </Style>
-    
+
+    <Style x:Key="contentListBox" TargetType="ListBox">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+    </Style> 
+
     <DataTemplate x:Key="smallTileDataTemplate">
         <Image Source="{Binding Image}" Height="100" Width="100"/>
     </DataTemplate>
@@ -58,8 +63,9 @@
             <Setter Property="HorizontalContentAlignment" Value="Center"/>
             <Setter Property="VerticalContentAlignment" Value="Center"/>
             <Setter Property="Padding" Value="10 5"/>
-            <Setter Property="FontSize" Value="35" />
+            <Setter Property="FontSize" Value="20" />
             <Setter Property="BorderThickness" Value="2" />
+            <Setter Property="Width" Value="200" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
