--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/MainWindow.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/MainWindow.xaml
@@ -40,7 +40,7 @@
         <Grid x:Name="bankLogos" Grid.Row="1" Grid.Column="0">
             <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Auto">
             <WrapPanel>
-                <Controls:Tile Style="{StaticResource SmallTileStyle}">
+                <Controls:Tile Style="{StaticResource SmallTileStyle}" Click="bank_click" Tag="ICICI">
                     <Controls:Tile.Background>
                         <ImageBrush ImageSource="Resources/Images/icici.png"/>
                     </Controls:Tile.Background>
