--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
@@ -66,6 +66,57 @@
             </Setter>
         </Style>
 
+    <Style x:Key="MetroButtonSmall" TargetType="{x:Type Button}">
+        <Setter Property="FocusVisualStyle" Value="{StaticResource ButtonFocusVisual}"/>
+        <Setter Property="Background" Value="#EEEEEEEE"/>
+        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Padding" Value="10 5"/>
+        <Setter Property="FontSize" Value="20" />
+        <Setter Property="BorderThickness" Value="2" />
+        <Setter Property="Width" Value="100" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Grid>
+                        <Border
+                                x:Name="Border"
+                                Background="{TemplateBinding Background}"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}">
+                            <Border.Effect>
+                                <DropShadowEffect Color="Black" Opacity=".50" ShadowDepth="6" RenderingBias="Quality" />
+                            </Border.Effect>
+                        </Border>
+
+                        <ContentPresenter
+                                HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                Margin="{TemplateBinding Padding}"
+                                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                RecognizesAccessKey="True" />
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter Property="OpacityMask" Value="#AA888888"/>
+                            <Setter Property="Margin" Value="2 1" />
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="BorderThickness" Value="0"/>
+                            <!--<Setter Property="Background" Value="DimGray"/>-->
+                            <Setter Property="Foreground" Value="Black"/>
+                            <Setter Property="FontWeight" Value="Bold"/>
+                            <Setter Property="BorderThickness" Value="4" />
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter Property="Foreground" Value="#ADADAD"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <Style x:Key="MetroButton" TargetType="{x:Type Button}">
         <Setter Property="FocusVisualStyle" Value="{StaticResource ButtonFocusVisual}"/>
         <Setter Property="Background" Value="#EEEEEEEE"/>
@@ -104,7 +155,9 @@
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="BorderThickness" Value="0"/>
                             <!--<Setter Property="Background" Value="DimGray"/>-->
-                            <Setter Property="Foreground" Value="White"/>
+                            <Setter Property="Foreground" Value="Black"/>
+                            <Setter Property="FontWeight" Value="Bold"/>
+                            <Setter Property="BorderThickness" Value="4" />
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="false">
                             <Setter Property="Foreground" Value="#ADADAD"/>
@@ -119,7 +172,7 @@
     <converters:IsProgressedConverter x:Key="IsProgressedConverter"/>
 
     <LinearGradientBrush x:Key="wizardBarBrush" StartPoint="0.5,0.0" EndPoint="0.5,1.0">
-        <GradientStop Color="#FFE4E4E4" Offset="0.25"/>
+        <GradientStop Color="AliceBlue" Offset="0.25"/>
         <GradientStop Color="#FFededed" Offset="0.50"/>
         <GradientStop Color="#FFFCFCFC" Offset="0.75"/>
     </LinearGradientBrush>
@@ -129,11 +182,15 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:KioskProgressBar}">
                     <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}" SnapsToDevicePixels="true">
-                        <Grid>
+                        <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="7*"></ColumnDefinition>
+                                <ColumnDefinition Width="3*"></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
                             <ItemsControl ItemsSource="{TemplateBinding ItemsSource}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                                 <ItemsControl.ItemsPanel>
                                     <ItemsPanelTemplate>
@@ -177,19 +234,8 @@
                                                 <Path Grid.Column="1"
                                                       Name="rightPath"
                                                       Style="{StaticResource outerPath}"/>
-                                                <Ellipse Grid.ColumnSpan="2"
-                                                         HorizontalAlignment="Center"
-                                                         Stroke="Transparent"
-                                                         Height="20"
-                                                         Width="20"
-                                                         Fill="{StaticResource wizardBarBrush}"/>
-                                                <Ellipse Grid.ColumnSpan="2"
-                                                         HorizontalAlignment="Center"
-                                                         Stroke="Transparent"
-                                                         Height="14"
-                                                         Width="14"
-                                                         Fill="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:KioskProgressBar}},
-                                                    Path=Foreground}">
+                                                <Ellipse Grid.ColumnSpan="2" HorizontalAlignment="Center" Stroke="Transparent" Height="20" Width="20" Fill="{StaticResource wizardBarBrush}"/>
+                                                <Ellipse Grid.ColumnSpan="2" HorizontalAlignment="Center" Stroke="Transparent" Height="14" Width="14" Fill="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:KioskProgressBar}}, Path=Foreground}">
                                                     <Ellipse.Visibility>
                                                         <MultiBinding Converter="{StaticResource IsProgressedConverter}"
                                                                       ConverterParameter="False">
