--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/WithdrawCash.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/WithdrawCash.xaml
@@ -1,44 +1,35 @@
-﻿<Controls:MetroWindow x:Class="DoyenBiz.BankingKiosk.Views.WithdrawCash"
+﻿<controls:Flyout x:Class="DoyenBiz.BankingKiosk.Views.WithdrawCash"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DoyenBiz.BankingKiosk.Views"
         mc:Ignorable="d"
-        Title="Withdraw Cash Step 1" 
-        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
-        ShowMinButton="False"
-        ShowMaxRestoreButton="False"
-        ShowCloseButton="False"
-        TitleCaps="False"
-        ResizeMode="NoResize"
-        WindowStartupLocation="CenterScreen"
-        WindowState="Maximized"
-        WindowStyle="None"
-        IgnoreTaskbarOnMaximize="True"
         BorderBrush="Black"
         BorderThickness="1"
-        xmlns:controls="clr-namespace:DoyenBiz.BankingKiosk.Controls"
+        xmlns:kioskControls="clr-namespace:DoyenBiz.BankingKiosk.Controls"
+        
         >
-    <Controls:MetroWindow.Background>
+    <controls:Flyout.Background>
         <ImageBrush ImageSource="/Resources/Images/ScreenBackground.jpg"/>
-    </Controls:MetroWindow.Background>
+    </controls:Flyout.Background>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height=".1*"/>
-            <RowDefinition Height=".15*"/>
-            <RowDefinition Height=".8*"/>               
+            <RowDefinition Height=".2*"/>
+            <RowDefinition Height=".7*"/>
         </Grid.RowDefinitions>
-        <Label Content="Withdraw Transaction" Grid.Row="0" Style="{StaticResource TitleTextLong}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <controls:KioskProgressBar x:Name="transactionProgressBar" Grid.Row="1" ItemsSource="{Binding Steps}" Foreground="#FF086398" Progress="{Binding Progress}" SnapsToDevicePixels="True" Margin="40"/>
+        <Label Content="Withdraw Transaction" Grid.Row="0" Style="{StaticResource TitleTextLong}"  Foreground="Black" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <kioskControls:KioskProgressBar x:Name="transactionProgressBar" Grid.Row="1" ItemsSource="{Binding Steps}" Foreground="#FF086398" Progress="{Binding Progress}" SnapsToDevicePixels="True" Margin="40"/>
         <Grid x:Name="swipeCard" Grid.Row="2" Visibility="Visible">
             <Grid HorizontalAlignment="Center" Margin="50">
                 <Grid.RowDefinitions>
                     <RowDefinition Height=".3*"/>
                     <RowDefinition Height=".7*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow">Please Swipe your Bank Credit/Debit Card to Continue...</TextBlock>
+                <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black" >Please Swipe your Bank Credit/Debit Card to Continue...</TextBlock>
                 <Image Grid.Row="1" Margin="10" Source="/Resources/Images/icici.png" Height="100"></Image>
                 <Button x:Name="cardEnteredButton" Grid.Row="1" Width="100" Height="50"
                         BorderThickness="2" 
@@ -54,10 +45,9 @@
                     <RowDefinition Height=".2*"/>
                     <RowDefinition Height=".5*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow">Please enter your 4 digit PIN Number</TextBlock>
+                <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black">Please enter your 4 digit PIN Number</TextBlock>
                 <Grid Grid.Row="1"  Height="50" HorizontalAlignment="Center">
-                <PasswordBox x:Name="inputPINBox" Width="100" Height="50"
-                             Controls:TextBoxHelper.ClearTextButton="True"
+                    <PasswordBox x:Name="inputPINBox" Width="100" Height="50"
                              VerticalContentAlignment="Center"
                              MaxLength="4"
                              />
@@ -75,9 +65,53 @@
                     <RowDefinition Height=".3*"/>
                     <RowDefinition Height=".7*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow">Place your right thumb on the finger print scanner..</TextBlock>
+                <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black">Place your right thumb on the finger print scanner..</TextBlock>
                 <Image Grid.Row="1" Margin="10" Source="/Resources/Images/icici.png" Height="100"></Image>
+                <Button x:Name="btnThumbprint"  Grid.Row="1" Width="100" Height="50"
+                        BorderThickness="2" 
+                        Style="{StaticResource MetroButton}"
+                        Margin="300,0,0,0" Content="Go"
+                        VerticalAlignment="Center" Click="thumbprintButton_Click"/>
+            </Grid>
+        </Grid>
+
+        <Grid x:Name="amountToWithdraw" Grid.Row="2" Visibility="Collapsed">
+            <Grid HorizontalAlignment="Center" Margin="50">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height=".3*"/>
+                    <RowDefinition Height=".3*"/>
+                    <RowDefinition Height=".5*"/>
+                    <RowDefinition Height=".7*"/>
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black">Place enter amount you would like to withdraw ...</TextBlock>
+                <Grid Grid.Row="1"  Height="50" HorizontalAlignment="Center">
+                    <TextBox x:Name="txtAmount" Width="100" Height="50"
+                             VerticalContentAlignment="Center"
+                             MaxLength="4"
+                             />
+                    <Button x:Name="btnAmount" Width="100" Height="50"
+                        BorderThickness="2" 
+                        Style="{StaticResource MetroButton}"
+                        Margin="300,0,0,0" Content="Go"
+                        VerticalAlignment="Center" Click="btnAmount_Click"/>
+                </Grid>
+                <TextBlock Grid.Row="2" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black" TextAlignment="Left" >Or select Amount ...</TextBlock>
+                <Grid x:Name="bankLogos" Grid.Row="3" Grid.Column="0">
+                    <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                        <WrapPanel Width="600">
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,20,20,20" >INR 100</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,20,20,20" >INR 500</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,20,20,20" >INR 1000</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,20,20,20" >INR 1500</Button>
+
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,10,20,20" >INR 2000</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,10,20,20" >INR 2500</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,10,20,20" >INR 5000</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,10,20,20" >INR 10000</Button>
+                        </WrapPanel>
+                    </ScrollViewer>
+                </Grid>
             </Grid>
         </Grid>
     </Grid>
-</Controls:MetroWindow>
+</controls:Flyout>
