--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/AmountToWithdraw.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/AmountToWithdraw.xaml
@@ -31,30 +31,32 @@
                     <RowDefinition Height=".5*"/>
                     <RowDefinition Height=".7*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black">Place enter amount you would like to withdraw ...</TextBlock>
+                <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}"
+                           TextWrapping="WrapWithOverflow" Foreground="Black">Place enter amount you would like to withdraw ...</TextBlock>
                 <Grid Grid.Row="1"  Height="50" HorizontalAlignment="Center">
                     <TextBox x:Name="txtAmount" Width="100" Height="50"
-                             VerticalContentAlignment="Center"
+                             VerticalContentAlignment="Center" TextAlignment="Right" FontSize="20" Text="{Binding SelectedAmount,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                              />
                     <Button x:Name="btnAmount" Width="100" Height="50"
                         BorderThickness="2" 
                         Style="{StaticResource MetroButton}"
                         Margin="300,0,0,0" Content="Go"
-                        VerticalAlignment="Center" Command="{Binding ButtonCommand}" CommandParameter="AmountWithdraw"/>
+                        VerticalAlignment="Center" Command="{Binding ButtonCommand}" 
+                            CommandParameter="{Binding Text,ElementName=txtAmount}" />
                 </Grid>
-                <TextBlock Grid.Row="2" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black" TextAlignment="Left" >Or select Amount ...</TextBlock>
+                <TextBlock Grid.Row="2" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black" TextAlignment="Left" >Quick Select</TextBlock>
                 <Grid x:Name="bankLogos" Grid.Row="3" Grid.Column="0">
                     <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Disabled">
                         <WrapPanel Width="600">
-                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,20,20,20" >INR 100</Button>
-                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,20,20,20" >INR 500</Button>
-                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,20,20,20" >INR 1000</Button>
-                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,20,20,20" >INR 1500</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,20,20,20" Command="{Binding AmountChangeCommand}" CommandParameter="100">INR 100</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,20,20,20" Command="{Binding AmountChangeCommand}" CommandParameter="500">INR 500</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,20,20,20" Command="{Binding AmountChangeCommand}" CommandParameter="1000">INR 1000</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,20,20,20" Command="{Binding AmountChangeCommand}" CommandParameter="1500">INR 1500</Button>
 
-                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,10,20,20" >INR 2000</Button>
-                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,10,20,20" >INR 2500</Button>
-                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,10,20,20" >INR 5000</Button>
-                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,10,20,20" >INR 10000</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,10,20,20" Command="{Binding AmountChangeCommand}" CommandParameter="2000">INR 2000</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,10,20,20" Command="{Binding AmountChangeCommand}" CommandParameter="2500">INR 2500</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,10,20,20" Command="{Binding AmountChangeCommand}" CommandParameter="5000">INR 5000</Button>
+                            <Button  Style="{StaticResource MetroButtonSmall}" Margin="20,10,20,20" Command="{Binding AmountChangeCommand}" CommandParameter="10000">INR 10000</Button>
                         </WrapPanel>
                     </ScrollViewer>
                 </Grid>
