--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/PinValidation.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/PinValidation.xaml
@@ -34,7 +34,7 @@
                 <Grid Grid.Row="1"  Height="50" HorizontalAlignment="Center">
                     <PasswordBox x:Name="inputPINBox" Width="100" Height="50"
                              VerticalContentAlignment="Center" 
-                             MaxLength="4"
+                             MaxLength="4" FontSize="30"
                              />
                    
                     <Button x:Name="validatePINButton" Width="100" Height="50"
