--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/MainWindow.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/MainWindow.xaml
@@ -33,7 +33,7 @@
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
-            <Label Content="Choose your Bank" Style="{StaticResource TitleTextLong}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <Label Content="Welcome! Please tap on your Bank ..." Style="{StaticResource TitleTextLong}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
             <Image x:Name="companyLogo" Source="/Resources/Images/icici.png" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,20,0"/>
         </Grid>
         
