--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/BioAuthenctication.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/BioAuthenctication.xaml
@@ -29,7 +29,7 @@
                     <RowDefinition Height=".3*"/>
                     <RowDefinition Height=".7*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black">Place your right thumb on the finger print scanner..</TextBlock>
+                <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black">Please place your registered thumb impression finger on the Finger print scanner ....</TextBlock>
                 <Image Grid.Row="1" Margin="10" Source="/Resources/Images/icici.png" Height="100"></Image>
                 <Button x:Name="btnThumbprint"  Grid.Row="1" Width="100" Height="50"
                         BorderThickness="2" 
