--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
@@ -47,6 +47,8 @@
     <Style x:Key="contentListBox" TargetType="ListBox">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Top" />
     </Style> 
 
     <DataTemplate x:Key="smallTileDataTemplate">
@@ -126,7 +128,7 @@
         <Setter Property="Padding" Value="10 5"/>
         <Setter Property="FontSize" Value="20" />
         <Setter Property="BorderThickness" Value="2" />
-        <Setter Property="Width" Value="200" />
+        <Setter Property="Width" Value="250" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
