--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/PinValidation.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/PinValidation.xaml
@@ -30,7 +30,7 @@
                     <RowDefinition Height=".2*"/>
                     <RowDefinition Height=".5*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black">Please enter your 4 digit PIN Number</TextBlock>
+                <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black">Please enter your 4-digit PIN Number</TextBlock>
                 <Grid Grid.Row="1"  Height="50" HorizontalAlignment="Center">
                     <PasswordBox x:Name="inputPINBox" Width="100" Height="50"
                              VerticalContentAlignment="Center" 
