--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/WithdrawCash.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/WithdrawCash.xaml
@@ -30,7 +30,7 @@
                     <RowDefinition Height=".3*"/>
                     <RowDefinition Height=".7*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black" >Please Swipe your Bank Credit/Debit Card to Continue...</TextBlock>
+                <TextBlock Grid.Row="0" Style="{StaticResource instructionsText}" TextWrapping="WrapWithOverflow" Foreground="Black" >Please Swipe your Axis Bank Credit/Debit Card to Continue...</TextBlock>
                 <Image Grid.Row="1" Margin="10" Source="/Resources/Images/icici.png" Height="100"></Image>
                 <Button x:Name="cardEnteredButton" Grid.Row="1" Width="100" Height="50"
                         BorderThickness="2" 
